--- a/src/main/resources/view/ClientForm.fxml
+++ b/src/main/resources/view/ClientForm.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="628.0" prefWidth="486.0" style="-fx-background-radius: 20;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.ClientFormController">
+<AnchorPane prefHeight="628.0" prefWidth="488.0" style="-fx-background-radius: 20;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.ClientFormController">
 
     <children>
         <Label fx:id="lblUsername" layoutX="29.0" layoutY="16.0" prefHeight="58.0" prefWidth="135.0" text=".">
@@ -39,14 +44,14 @@
                       <Image url="@../img/icons8-photo-gallery-100.png" />
                   </image>
               </ImageView>
-              <ScrollPane layoutX="8.0" layoutY="6.0" prefHeight="467.0" prefWidth="471.0">
-                  <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="454.0" prefWidth="469.0">
-                          <children>
-                              <VBox fx:id="VBox" prefHeight="449.0" prefWidth="460.0" />
-                          </children>
-                      </AnchorPane>
-                  </content>
+              <ScrollPane fx:id="idScroll" layoutX="8.0" layoutY="6.0" prefHeight="467.0" prefWidth="471.0">
+               <content>
+                  <VBox fx:id="VBox" prefWidth="470.0">
+                     <children>
+                        <HBox fx:id="hBox" prefHeight="100.0" prefWidth="200.0" />
+                     </children>
+                  </VBox>
+               </content>
               </ScrollPane>
          </children></AnchorPane>
       <ImageView fitHeight="85.0" fitWidth="128.0" layoutX="350.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
